--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -125,9 +125,9 @@
                                         <label class="control-label col-md-3 col-sm-3 col-xs-12">Address </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <input class="form-control pull-right"
-                                                   data-ng-model="address" name="Address" id="Address" type="text" placeholder="Address" required>
-                                            <span style="color:red" ng-show="form.Address.$touched && form.Address.$invalid">
-                                            <span ng-show="form.Address.$error.required">*address is required.</span>
+                                                   data-ng-model="address" name="address" id="address" type="text" placeholder="Address" required>
+                                            <span style="color:red" ng-show="form.address.$touched && form.address.$invalid">
+                                            <span ng-show="form.address.$error.required">*address is required.</span></span>
                                         </div>
                                     </div>
 
@@ -188,7 +188,7 @@
                                 <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
 
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">
+                                <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="settID(teacher.teacher_ID);" data-toggle="modal" data-target="#myModal2">
                                     Payment
                                 </button>
                                 <!-- Modal -->
@@ -197,65 +197,51 @@
                                         <div class="modal-content">
                                             <div class="modal-header">
                                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel2"> Payment Window</h4>
+                                                <h4 class="modal-title" id="myModalLabel2"> Attendance</h4>
                                             </div>
                                             <div class="modal-body">
 
-                                                <div class="row" style="padding-left: 15px;">
-                                                    <div class="col-lg-9 col-lg-offset-1 form">
-
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">NIC:</label>
-
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="NatIdentity" type="number" placeholder="NIC" readonly>
-                                                        </div>
-
-                                                        <div class="row" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm"> Amount: </label>
-
-                                                            <div class="from-group input-group" style="padding-left: 1.7cm">
-                                                                <span class="input-group-addon">Rs.</span>
-                                                                <input class="form-control"
-                                                                       style=" height: 35px" data-ng-model="Bal" type="number" placeholder="payment">
-                                                                <span class="input-group-addon">.00 </span>
+                                                <form id="form3" name="form3" role="form" class="form-horizontal form-label-left" novalidate>
+                                                    <div class="row" style="padding-left: 15px">
+                                                        <div class="form-group">
+                                                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Teacher ID </label>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                                <input class="form-control pull-right"
+                                                                       data-ng-model="thisTID"  type="text" placeholder="teacher ID" readonly>
 
                                                             </div>
                                                         </div>
+                                                        <div class="form-group">
+                                                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Year </label>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                                <input class="form-control pull-right"
+                                                                       data-ng-model="thisYear" type="text" placeholder="year" readonly>
 
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">Due Date:</label>
-
-
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="DuDate" type="date">
-
+                                                            </div>
                                                         </div>
+                                                        <div class="form-group">
+                                                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Month </label>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                                <input class="form-control pull-right"
+                                                                       data-ng-model="thisMonth" type="text" placeholder="month" readonly>
 
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">Date:</label>
-
-
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="toDate" type="date">
-
+                                                            </div>
                                                         </div>
+                                                        <div class="form-group">
+                                                            <label class="control-label col-md-3 col-sm-3 col-xs-12">Date </label>
+                                                            <div class="col-md-6 col-sm-6 col-xs-12">
+                                                                <input class="form-control pull-right"
+                                                                       data-ng-model="thisDate" type="text" placeholder="date" readonly>
 
-                                                        <div class="row from-group" style="padding-bottom: 5px">
-                                                            <label class="pull-left" style="padding-left: 1cm">Officer:</label>
-
-                                                            <input class="form-control pull-right"
-                                                                   style="width: 300px; height: 35px" data-ng-model="OffName" type="text" placeholder="Officer Name">
+                                                            </div>
                                                         </div>
-
-
                                                     </div>
-                                                </div>
+                                                </form>
 
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Close</button>
-                                                <button type="button" ng-click="trans(NatIdentity,Bal,DuDate,toDate,OffName);" class="btn btn-primary btn-sm" > Done</button>
+                                                <button type="button" ng-click="attendance(NatIdentity,Bal,DuDate,toDate,OffName);" class="btn btn-primary btn-sm" > Done</button>
                                             </div>
                                         </div>
                                         <!-- /.modal-content -->
