student profile view is done

--- a/public/views/teachers.html
+++ b/public/views/teachers.html
@@ -191,7 +191,7 @@
 
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="settID(teacher.teacher_ID);" data-toggle="modal" data-target="#myModal2">
-                                    Payment
+                                    Mark Attendance
                                 </button>
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
