sec level algo added to every controller

--- a/public/views/students.html
+++ b/public/views/students.html
@@ -273,7 +273,7 @@
 
                             <!--</td>-->
                             <td><center><div class="btn-group">
-                                <a href="#/members/{{member.NIC}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
+                                <a ng-href="#/dashboard/students/{{student.ID}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
 
                                 <!-- Button trigger modal -->
                                 <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">
