--- a/public/views/students/studentProfile.html
+++ b/public/views/students/studentProfile.html
@@ -32,7 +32,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>User Report <small> profile</small></h2>
+                        <h2>User Report of {{id}}<small> profile</small></h2>
 
                         <div class="clearfix"></div>
                     </div>
@@ -135,7 +135,7 @@
 
                             <!--<a class="btn btn-success"><i class="fa fa-edit m-right-xs"></i>Edit Profile</a>-->
                             <br />
-                            
+
                             <!-- end of skills -->
 
                         </div>
