angular animate was added

--- a/public/views/dashboard/main.html
+++ b/public/views/dashboard/main.html
@@ -12,7 +12,7 @@
 
         <div class="right_col" role="main">
 
-            <div ui-view></div>
+            <div ui-view id="div-view" class="view-slide-in"></div>
 
         </div>
 
