--- a/public/views/students.html
+++ b/public/views/students.html
@@ -11,7 +11,7 @@
         <div class="under">
 
             <!-- Button trigger modal -->
-            <button class="btn btn-xs btn-success btn-green" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i>
+            <button ng-show="secLevel" class="btn btn-xs btn-success btn-green" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus"></i>
                  New Student
             </button>
 
@@ -351,7 +351,7 @@
                                     <!-- /.modal-dialog -->
                                 </div>
                                 <!-- /.modal -->
-                                <button type="button" ng-click="deleteMember(member.NIC);" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></button>
+                                <button type="button" ng-show="secLevel" ng-click="deleteMember(member.NIC);" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></button>
                             </div>
                             </center>
                             </td>
