commit before demonstration

--- a/public/views/students.html
+++ b/public/views/students.html
@@ -276,9 +276,9 @@
                                 <a ng-href="#/dashboard/students/{{student.ID}}" class="btn btn-info btn-xs"  style="color: #ffffff" role="button"><i class="fa fa-user"></i> Profile</a>
 
                                 <!-- Button trigger modal -->
-                                <button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">
-                                    Payment
-                                </button>
+                                <!--<button type="button" class="btn btn-warning btn-orange btn-xs" ng-click="setNIC(member.NIC);" data-toggle="modal" data-target="#myModal2">-->
+                                    <!--Payment-->
+                                <!--</button>-->
                                 <!-- Modal -->
                                 <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
                                     <div class="modal-dialog">
